discussion/kv_engine/172222/172222_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: test

Change-Id: I0dee633ff0a9261c21a37b39ef1bee8f1b312eab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-14 18:52:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-14 19:33:26.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16003/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16003/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16003/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44441/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44441/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14922/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 05cbef45c..f2b23b51b 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -890,7 +889,8 @@ TEST_P(KVStoreErrorInjectionTest, DISABLED_WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18098/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18098/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18098/ )

Test exceeded the timeout:
[2022-03-14T19:13:56.314Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18098/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16841/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17771/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17771/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17771/ )

Test exceeded the timeout:
[2022-03-14T19:10:29.947Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17771/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18803/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18803/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5718/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5718/ )

Test exceeded the timeout:
[2022-03-14T19:08:58.623Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26178/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5659/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
